# signup_api

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: fastapi.yml  release.yml
api/: db.py  middleware.py
api/models/: __init__.py  signups.py  users.py
api/routes/: __init__.py  auth.py  index.py  signups.py
api/schemas/: __init__.py  tokens.py  users.py
api/services/: __init__.py  auth.py  auth2.py  test_auth.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  backend.dockerfile  main.py  pyproject.toml
backend/app/: README.md  config.py  db.py  middleware.py  utils.py
backend/app/api/: __init__.py  auth.py  deps.py  events.py  index.py  signups.py  tasks.py  users.py
backend/app/models/: __init__.py  base.py  events.py  signups.py  tasks.py  tokens.py  users.py
backend/app/routes/: __init__.py
backend/app/schemas/: __init__.py  events.py  signups.py  tasks.py  users.py
backend/app/services/: __init__.py  auth.py  bot.py  crypt.py  google_cal.py  scheduler.py
backend/app/services/scheduler/: google_cal.py  main.py  scheduler.py  tasks.py
backend/app/services/telegram/: README.md  bot_test.py  callbacks.py  commands.py  keyboards.py  loader.py  middlewares.py  routes.py
backend/app/services/telegram/handlers/: __init__.py  handlers.py  hi.py  inlines.py  main.py  states.py
backend/app/services/telegram/texts/: __init__.py  buttons.py  keyboards.py  main.py  stickers.py
backend/app/services/telegram/texts/en/: keyboards.py  main.py
backend/app/services/telegram/texts/ru/: keyboards.py  main.py
backend/tests/: conftest.py  locustfile.py  test_api.py  test_auth.py
docker/nginx/: fast-api.conf
frontend/: Dockerfile  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/styles/: main.scss
frontend/src/components/apiviews/: LoginModal.vue
frontend/src/components/layout/: TheHeader.vue
frontend/src/components/views/: HealthCheck.vue  LoginModal.vue  SignupCreateModal.vue  SignupTable.vue
frontend/src/router/: index.js
frontend/src/store/: index.js  signup.js  user.js
frontend/src/views/: HomeView.vue  SignupView.vue
nginx/: fast-api.conf
tests/: conftest.py
vue/: package-lock.json  package.json
vue/src/: App.vue  main.js
vue/src/components/: HelloApi.vue
vue/src/components/apiviews/: SignupCreateModal.vue  SignupTable.vue  StatusHeader.vue
vue/src/components/layout/: TheFooter.vue  TheHeader.vue
vue/src/router/: index.js
vue/src/views/: HomeView.vue  SignupView.vue
