[tool.poetry]
name = "signup_api"
version = "0.1.9"
description = "An 100% asynchronous Fast API service for signups and Telegram integration"
authors = ["mbrav <mbrav@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
fastapi-pagination = "^0.9"
pydantic = {extras = ["email", "dotenv"], version = "^1.9"}
uvicorn = {extras = ["standard"], version = "^0.17"}
SQLAlchemy = "^1.4"
asyncpg = "*"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["argon2"], version = "^1.7"}
python-multipart = "*"
httpx = {extras = ["http2"], version = "^0.22"}
APScheduler = "^3.9"
transliterate = "*"
aiogram = "^3.0.0b3"


[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-env = "*"
pytest-asyncio = "*"
flake8 = "*"
autopep8 = "*"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
addopts = "-vv -p no:cacheprovider"
asyncio_mode = "auto"
env = [
    "TESTING=True",
    "LOGGING=False"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
