[tool.poetry]
name = "signup_api"
version = "0.1.9"
description = "An 100% asynchronous Fast API service for signups and Telegram integration"
authors = ["mbrav <mbrav@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85"
fastapi-pagination = "^0.10"
pydantic = {extras = ["email", "dotenv"], version = "^1.9"}
uvicorn = {extras = ["standard"], version = "^0.18"}
SQLAlchemy = "^1.4"
asyncpg = "^0.26"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["argon2"], version = "^1.7"}
python-multipart = "0.0.5"
httpx = {extras = ["http2"], version = "^0.23"}
APScheduler = "^3.9"
transliterate = "^1.10"
aiogram = "^3.0.0b5"


[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-env = "*"
pytest-asyncio = "*"
flake8 = "*"
autopep8 = "*"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
addopts = "-vv -p no:cacheprovider"
asyncio_mode = "auto"
env = [
    "TESTING=True",
    "LOGGING=False",
    "POSTGRES_USER=postgres",
    "POSTGRES_PASSWORD=postgres",
    "POSTGRES_SERVER=db",
    "POSTGRES_PORT=5432",
    "POSTGRES_DB=postgres",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
